--- a/AudioRecorder/res/layout/fragment_recordings.xml
+++ b/AudioRecorder/res/layout/fragment_recordings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linearLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,13 +7,46 @@
     android:gravity="center"
     android:orientation="vertical" >
 
-    <ListView
-        android:id="@+id/recordingsListView"
+    <ViewFlipper
+        android:id="@+id/state_viewswitcher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="3dp"
         android:background="@drawable/audio_recorder_overlay_background"
-        android:cacheColorHint="#00000000" >
-    </ListView>
+        android:inAnimation="@anim/slide_in_right"
+        android:outAnimation="@anim/slide_out_left"
+        android:padding="3dp" >
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/recordingsListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:cacheColorHint="#00000000" >
+        </ListView>
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical" >
+
+            <in.uncod.android.media.widget.AudioPlayerView
+                android:id="@+id/audio_player"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical" />
+
+            <Button
+                android:id="@+id/btn_okay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/okay" />
+        </LinearLayout>
+    </ViewFlipper>
+
+</FrameLayout>
